--- a/src/app/doc/texteditor.document.html
+++ b/src/app/doc/texteditor.document.html
@@ -78,7 +78,8 @@
 					</div>
 					<div id="collapse_ex_1" class="collapse" role="tabpanel" aria-labelledby="ex_1">
 						<div class="jumbotron">
-							<code>{{code_1}}</code>
+							app.component.html<br><br>
+							<code>{{code_1}}</code><br>
 							<pre><code>{{code_output_1}}</code></pre>
 						</div>
 					</div>
@@ -112,7 +113,8 @@
 					</div>
 					<div id="collapse_ex_2" class="collapse" role="tabpanel" aria-labelledby="ex_2">
 						<div class="jumbotron">
-							<code>{{code_2}}</code>
+							app.component.html<br><br>
+							<code>{{code_2}}</code><br>
 							<pre><code>{{code_output_2}}</code></pre>
 						</div>
 					</div>
@@ -145,7 +147,8 @@
 					</div>
 					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
 						<div class="jumbotron">
-							<code>{{code_3}}</code>
+							app.component.html<br><br>
+							<code>{{code_3}}</code><br>
 							<pre><code>{{code_output_3}}</code></pre>
 						</div>
 					</div>
